samples/_failures_safe/1761648649_11ce09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5ec5f2e.c: In function ‘main’:
./samples/SAFE/__tmp_d5ec5f2e.c:180:13: error: expected declaration or statement at end of input
  180 |             case STATE_COMPLETE: printf("COMPLETE"); break;
      |             ^~~~
./samples/SAFE/__tmp_d5ec5f2e.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5ec5f2e.c:180:13: error: expected declaration or statement at end of input
